<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     <LinearLayout
	        android:id="@+id/amount_main_RL"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_below="@+id/LL_for_prods_custom_view"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp">
	         <View android:layout_width="fill_parent"
	             android:layout_height="1dp"
	             android:background="@color/LightGrey"/>
			<RelativeLayout 
			    android:id="@+id/app_dt_RL"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="10dp"
			    >
			    <TextView 
			        android:id="@+id/app_dt_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textStyle="bold"
			        android:layout_alignParentLeft="true"
			        android:text="@string/appointment_Date"
			        />
			    <TextView 
			        android:id="@+id/app_dt_value_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
			        android:inputType="date"
			        android:text="05 Jan 2016"
			        />
			</RelativeLayout>
			<RelativeLayout 
			    android:id="@+id/app_dt_to_RL"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="10dp"
			    >
			    <TextView 
			        android:id="@+id/app_dt_to_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textStyle="bold"
			        android:layout_alignParentLeft="true"
			        android:text="@string/appointment_date_to"
			        />
			    <TextView 
			        android:id="@+id/app_dt_to_value_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
			        android:text="04 Feb 2016"
			        />
			</RelativeLayout>	     
			<RelativeLayout 
			    android:id="@+id/relation_RL"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="10dp"
			    >
			    <TextView 
			        android:id="@+id/relation_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textStyle="bold"
			        android:layout_alignParentLeft="true"
			        android:text="@string/relation"
			        />
			    <TextView 
			        android:id="@+id/relation_value_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
			        android:text=""
			        />
			</RelativeLayout>	     
			<RelativeLayout 
			    android:id="@+id/services_required_RL"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="10dp"
			    >
			    <TextView 
			        android:id="@+id/services_required_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textStyle="bold"
			        android:layout_alignParentLeft="true"
			        android:text="@string/services_required"
			        />
			    <TextView 
			        android:id="@+id/services_required_value_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
			        android:text=""
			        />
			</RelativeLayout>	     
			<RelativeLayout 
			    android:id="@+id/services_required_for_RL"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="10dp"
			    >
			    <TextView 
			        android:id="@+id/services_required_for_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textStyle="bold"
			        android:layout_alignParentLeft="true"
			        android:text="@string/services_required_for"
			        />
			    <TextView 
			        android:id="@+id/services_required_for_value_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
			        android:text="Post surgical Care"
			        />
			</RelativeLayout>	     	        
	        <RelativeLayout 
			    android:id="@+id/rl_city"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="10dp"
			    >
			    <TextView 
			        android:id="@+id/tv_city"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textStyle="bold"
			        android:layout_alignParentLeft="true"
			        android:text="@string/city"
			        />
			    <TextView 
			        android:id="@+id/tv_city_value"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
			        android:text="Mumbai"
			        />
			</RelativeLayout>	     	        
	        
	    </LinearLayout>
	    

</LinearLayout>
