<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/White">
<include 
            android:id="@+id/toolbar" 
            layout="@layout/tool_bar_cart"
            android:layout_alignParentTop="true"
            />
<RelativeLayout 
    android:id="@+id/checkout_quant_RL"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
        android:paddingBottom="5dp"
    android:layout_below="@+id/toolbar"
    >
    <TextView 
        android:id="@+id/checkout_tv"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="16sp"
        android:text="@string/checkout"
        android:layout_centerInParent="true"
        
        />
    <Button 
        android:id="@+id/checkout_count"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/white_dot"
        android:text="00"
        android:textSize="15sp"
        android:layout_centerVertical="true"
        android:textColor="@color/Red"
        android:layout_marginRight="3dp"
        android:layout_alignParentRight="true"
        />
</RelativeLayout>
<ImageView 
         android:id="@+id/checkout_progress_summary_Iv"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/hs_process_summary"
         android:background="@color/White"
         android:layout_marginBottom="10dp"
         android:layout_below="@id/checkout_quant_RL"
         />
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/checkout_progress_summary_Iv"
        android:layout_above="@+id/proceed_to_pay"
        >
        
	<RelativeLayout 
	    android:id="@+id/RL_For_scroll"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="10dp"
	    >
	 
     
	    <LinearLayout 
	        android:id="@+id/LL_for_prods_custom_view"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="@color/LightGreyWhite"
	        android:layout_marginBottom="10dp"
	        >
	       
	    </LinearLayout>
	    
	    <LinearLayout
	        android:id="@+id/amount_main_RL"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_below="@+id/LL_for_prods_custom_view"
	        android:background="@color/LightGreyWhite"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        >
	         <include layout="@layout/separator_grey_1dp"/>
			<RelativeLayout 
			    android:id="@+id/amount_RL"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="10dp"
			    >
			    <TextView 
			        android:id="@+id/amount_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textStyle="bold"
			        android:layout_alignParentLeft="true"
			        android:text="@string/amount"
			        />
			    <TextView 
			        android:id="@+id/amount_value_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
			        android:text="00"
			        />
			</RelativeLayout>
			<RelativeLayout 
			    android:id="@+id/okler_disc_RL"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="10dp"
			    >
			    <TextView 
			        android:id="@+id/okler_disc_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textStyle="bold"
			        android:layout_alignParentLeft="true"
			        android:text="@string/okler_discount"
			        />
			    <TextView 
			        android:id="@+id/okler_disc_value_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
			        android:text="00"
			        />
			</RelativeLayout>	     
			<RelativeLayout 
			    android:id="@+id/coupon_disc_RL"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:visibility="gone"
			    android:layout_marginBottom="10dp"
			    >
			    <TextView 
			        android:id="@+id/coupon_disc_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textStyle="bold"
			        android:layout_alignParentLeft="true"
			        android:text="@string/coupon_discount"
			        />
			    <TextView 
			        android:id="@+id/coupon_disc_value_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
			        android:text="00"
			        />
			</RelativeLayout>	     
			<RelativeLayout 
			    android:id="@+id/shipping_charg_RL"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="10dp"
			    >
			    <TextView 
			        android:id="@+id/shipping_charg_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textStyle="bold"
			        android:layout_alignParentLeft="true"
			        android:text="@string/shipping_charg"
			        />
			    <TextView 
			        android:id="@+id/shipping_charg_value_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
			        android:text="00"
			        />
			</RelativeLayout>	     
			<RelativeLayout 
			    android:id="@+id/tax_RL"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="10dp"
			    >
			    <TextView 
			        android:id="@+id/tax_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textStyle="bold"
			        android:layout_alignParentLeft="true"
			        android:text="@string/tax"
			        />
			    <TextView 
			        android:id="@+id/tax_value_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
			        android:text="00"
			        />
			</RelativeLayout>	     
			<RelativeLayout 
			    android:id="@+id/net_pay_RL"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="10dp"
			    >
			    <TextView 
			        android:id="@+id/net_pay_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textStyle="bold"
			        android:layout_alignParentLeft="true"
			        android:text="@string/net_pay"
			        />
			    <TextView 
			        android:id="@+id/net_pay_value_tv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
			        android:textColor="@color/Red"
			        android:text="00"
			        />
			</RelativeLayout>	     	        
	        
	    </LinearLayout>
	    
	    
	    <RelativeLayout 
	        android:id="@+id/coupon_code_heading_RL"
	        android:layout_width="fill_parent"
	        android:layout_height="?actionBarSize"
    		android:minHeight="?actionBarSize"
    		android:background="@color/LightGrey"
    		android:layout_below="@+id/amount_main_RL"
	        android:layout_marginBottom="10dp"
	        >
	         <RelativeLayout 
	            android:layout_centerHorizontal="true"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            > 
	            <TextView 
	            android:id="@+id/coupon_code_heading"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="20sp"
	            android:text="@string/coupon_heading"
	            />
	        
	        <TextView 
	            android:id="@+id/coupon_code_desc"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="12sp"
	            android:text="@string/coupon_code_desc"
	            android:layout_below="@+id/coupon_code_heading"
	            />
	        </RelativeLayout>
	    </RelativeLayout>
	    <RelativeLayout 
            android:id="@+id/coupon_code_RL"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coupon_code_heading_RL"
            >
           <TextView 
	        android:id="@+id/coupon_appl_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:textColor="@color/Red"
	        android:text="@string/coupon_appl_text"
	        android:visibility="gone"
	        android:layout_marginBottom="10dp"
	        />
	    
	        <RelativeLayout 
                android:id="@+id/apply_button_RL"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
            	android:layout_below="@+id/coupon_appl_text"    
            	android:layout_margin="10dp"
                >
            <EditText 
                android:id="@+id/coupon_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions"
                android:ems="10"
                
                />
            <Button 
                android:id="@+id/apply_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Red"
                android:text="@string/apply"
                android:textColor="@color/White"
                android:layout_toRightOf="@+id/coupon_code"
                />
            </RelativeLayout>
        </RelativeLayout>
	    <TextView 
	        android:id="@+id/title_user_details"
	        android:layout_width="fill_parent"
	        android:layout_height="?actionBarSize"
    		android:minHeight="?actionBarSize"
    		android:text="USER DETAILS"
    		android:background="@color/LightGrey"
	        android:gravity="center"
	        android:layout_below="@+id/coupon_code_RL"
	        android:textSize="20sp"
	        android:layout_marginBottom="10dp"
	        />
	    <include 
	        android:id="@+id/user_details"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        layout="@layout/include_user_details_checkout_summary"
	        android:layout_below="@+id/title_user_details"
	        android:layout_margin="10dp"
	        
	        />
	    <TextView 
	        android:id="@+id/title_addr"
	        android:layout_width="fill_parent"
	        android:layout_height="?actionBarSize"
    		android:minHeight="?actionBarSize"
    		android:text="ADDRESS"
    		android:layout_below="@+id/user_details"
    		android:background="@color/LightGrey"
	        android:gravity="center"
	        android:textSize="20sp"
	        android:layout_marginBottom="10dp"
	        />
	    <RelativeLayout 
	        android:id="@+id/delivery_RL"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/title_addr"
	        >
	    <include 
            android:id="@+id/delivery_addr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/include_address_by_type_layout"
            android:layout_margin="10dp"
            />
	    </RelativeLayout>
	    <RelativeLayout 
	        android:id="@+id/billing_RL"
	        android:layout_width="fill_parent"
	        android:layout_below="@+id/delivery_RL"
	        android:layout_height="wrap_content">
	    <include 
            android:id="@+id/billing_addr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            
            layout="@layout/include_address_by_type_layout"
            android:layout_margin="10dp"
            />
	    </RelativeLayout>
	    <LinearLayout android:id="@+id/blueTickUntick"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_alignParentBottom="true"
	        android:layout_marginBottom="10dp"
	        android:layout_below="@+id/billing_RL" >
	    <ImageView 
	        android:id="@+id/blueunTick"
	        android:layout_width="24dp"
	        android:layout_height="24dp"
	        android:src="@drawable/checkmark_circle"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/billing_RL"
	        android:layout_marginLeft="10dp"
	         />
	    
	    
	    <ImageView 
	        android:id="@+id/blueTick"
	        android:layout_width="24dp"
	        android:layout_height="24dp"
	        android:src="@drawable/blue_tick_icon"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"	        
	        android:layout_marginLeft="10dp"
	        
	        android:visibility="gone"
	        />
	    </LinearLayout>
	    <TextView 
	        android:id="@+id/i_agree_tv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_alignParentBottom="true"
	        android:layout_toRightOf="@+id/blueTickUntick"
	        android:text="@string/i_agree"
	        android:layout_below="@+id/billing_RL"
	        android:layout_marginBottom="10dp"
	        />
	    <TextView 
	        android:id="@+id/terms_n_cons_tv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/i_agree_tv"
	        android:textColor="@color/Red"
	        android:layout_alignParentBottom="true"
	        android:text="@string/terms_n_cons"
	        android:layout_below="@+id/billing_R"
	        android:layout_marginLeft="2dp"
	        android:layout_marginBottom="10dp"
	        />
	    
	</RelativeLayout>
		
		
    </ScrollView>
    <Button 
	        android:id="@+id/proceed_to_pay"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
    		android:background="@color/Blue"
	        android:text="@string/proceed_to_pay"
	        android:textSize="16sp"
	        android:gravity="center"
	        android:paddingTop="6dp"
	        android:paddingBottom="6dp"
	        android:textColor="@color/White"
	        android:layout_above="@+id/bottombar"
	        android:layout_marginTop="10dp"
	        />
<include
    	android:layout_alignParentBottom="true"
        android:id="@+id/bottombar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/layout_bottom_bar" />
</RelativeLayout>